번역되고리스트도나옴